@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-04T16:27:31Z",
-  "count_outdated" : 231,
-  "uniques_outdated" : 51,
+  "timestamp" : "2022-06-07T01:52:52Z",
+  "count_outdated" : 232,
+  "uniques_outdated" : 52,
   "count" : 237,
   "uniques" : 54,
   "views" : [
-    {
-      "timestamp": "2022-05-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-26T00:00:00Z",
       "count": 4,
