@@ -1,12 +1,7 @@
 {
-  "count": 6,
+  "count": 5,
   "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-05-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-26T00:00:00Z",
       "count": 4,
